--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
               <a href="https://www.linkedin.com/feed/update/urn:li:activity:7183101235967795200/">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/_d5447f68-8521-493f-9c18-0c5adb724dd4.jpeg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="./assets/images/123456.jpeg" alt="Design conferences in 2022" loading="lazy">
 
                 </figure>
 
@@ -1135,7 +1135,7 @@
               <a href="https://www.linkedin.com/feed/update/urn:li:activity:7183084558844665856/">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/_075a34d9-a4e9-4809-a2d6-a597df8b0084.jpeg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="1234.jpeg" alt="Design conferences in 2022" loading="lazy">
 
                 </figure>
 
