--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
               <a href="https://www.linkedin.com/feed/update/urn:li:activity:7183084558844665856/">
 
                 <figure class="blog-banner-box">
-                  <img src="1234.jpeg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="./assets/images/123456.jpeg" alt="Design conferences in 2022" loading="lazy">
 
                 </figure>
 
