--- a/index.html
+++ b/index.html
@@ -511,20 +511,11 @@
             <li class="timeline-item">
 
             <h4 class="h4 timeline-item-title">Self-Employed</h4>
-            <h4 class="h4 timeline-item-title" style="font-size: 13px;">Experienced researcher and idea developer: pioneering innovations</h4>
+            <h4 class="h4 timeline-item-title" style="font-size: 13px;">Product Architect And Researcher</h4>
 
             <span> Oct 2023 – Present</span>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Legion IT Services, Canada, Toronto</h4>
-              <h4 class="h4 timeline-item-title" style="font-size: 13px;">QA Software Development Engineer</h4>
-
-              <span> Jan 2023 – Sep 2023</span>
-
-
-
-            </li>
+            <
 
             <li class="timeline-item">
 
@@ -541,12 +532,23 @@
 
             </li>
 
+              li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Legion IT Services, Canada, Toronto</h4>
+              <h4 class="h4 timeline-item-title" style="font-size: 13px;">QA Software Development Engineer</h4>
+
+              <span> Jan 2023 – Sep 2023</span>
+
+
+
+            </li>
+
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Self-employed</h4>
-              <h4 class="h4 timeline-item-title" style="font-size: 13px;">Developer/QA Engineer</h4>
+              <h4 class="h4 timeline-item-title" style="font-size: 13px;">Trader</h4>
 
-              <span>Feb 2020 - Aug 2022</span>
+              <span>May 2018 – Feb 2021 </span>
 
            
 
@@ -574,6 +576,19 @@
 
             <ol class="timeline-list">
 
+
+              <li class="timeline-item">
+
+                <h4 class="h4 timeline-item-title">Google, Toronto ON</h4>
+
+                <span>Jun 2024 - Jul 2024</span>
+
+                <p class="timeline-text">
+                  Certificate, Foundations of Project Management
+                </p>
+
+              </li>
+
               <li class="timeline-item">
 
                 <h4 class="h4 timeline-item-title">Legion QA School, Canada, Toronto </h4>
@@ -598,11 +613,19 @@
 
               </li>
 
-        
+         <li class="timeline-item">
 
-<!--                <p class="timeline-text">-->
-<!--                  Diploma of graduation, Day Trader - Stocks and Futures market-->
-<!--                </p>-->
+                <h4 class="h4 timeline-item-title">Pastry Arts, Multidisciplinary Center Technical Education, Ukraine</h4>
+
+                <span>Sep 2014 - Jun 2018</span>
+
+                <p class="timeline-text">
+                  Diploma, Pastry Arts
+                </p>
+
+              </li>
+
+
 
               </li>
 
