--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
             <span> Oct 2023 – Present</span>
 
-            <
+            
 
             <li class="timeline-item">
 
@@ -524,15 +524,11 @@
 
               <span>May 2023 – Feb 2024</span>
 
-<!--              <p class="timeline-text">-->
-<!--                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et-->
-<!--                quas molestias-->
-<!--                exceptur.-->
-<!--              </p>-->
+
 
             </li>
 
-              li class="timeline-item">
+              <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Legion IT Services, Canada, Toronto</h4>
               <h4 class="h4 timeline-item-title" style="font-size: 13px;">QA Software Development Engineer</h4>
@@ -615,7 +611,7 @@
 
          <li class="timeline-item">
 
-                <h4 class="h4 timeline-item-title">Pastry Arts, Multidisciplinary Center Technical Education, Ukraine</h4>
+                <h4 class="h4 timeline-item-title">Multidisciplinary Center Technical Education, Ukraine</h4>
 
                 <span>Sep 2014 - Jun 2018</span>
 
